# Ray-Tracer

./: .gitignore  CMakeLists.txt  README.md  RayTracing.sln
RayTracing/: RayTracing.cpp  RayTracing.vcxproj  RayTracing.vcxproj.filters  Resource.h
RayTracing/Head/: AABB.h  AARect.h  BVH.h  Box.h  Camera.h  ConstantMedium .h  Hitable.h  HitableList.h  Material.h  MoveSphere.h  Perlin.h  Random.h  Ray.h  Sphere.h  Texture.h  Vector3.h  World.h  framework.h
RayTracing/Src/: RayTracing.cpp
